# fences

./: .gitsubtrees  Cargo.toml  LICENSE  README.md  app.manifest  build.rs  windows_crate.patch
branding/: README.md
examples/: ww-example.rs
src/: app.rs  app_state.rs  commands.rs  controls.rs  desktop_cover.rs  desktop_mirror.rs  error.rs  fence.rs  fut.rs  geo.rs  layout.rs  lib.rs  main.rs  mutex.rs  paths.rs  prompt.rs  utils.rs  window.rs
src/app_state/: mod.rs  save_thread.rs
src/config/: color.rs  config.rs  mod.rs  save_thread.rs  state.rs
src/config/color/: mod.rs  tests.rs
src/fence/: fence.rs  fence_list.rs  fences.rs  icon.rs  import_dialog.rs  mod.rs  scroll_area.rs  title_bar.rs
src/prompt/: confirm.rs  folder.rs  input.rs  mod.rs
tools/copy-desktop-alpha/: Cargo.toml
tools/copy-desktop-alpha/src/: main.rs
tools/copy-desktop-only-alpha/: Cargo.toml
tools/copy-desktop-only-alpha/src/: main.rs
win_wrapper/: Cargo.toml
win_wrapper/examples/: ww-example.rs
win_wrapper/src/: utils.rs  window.rs
win_wrapper/src/prompt/: confirm.rs  folder.rs  input.rs
winwrapper/: LICENSE
winwrapper/examples/: ww-example.rs
winwrapper/src/: lib.rs  mutex.rs  result.rs  window.rs
winwrapper/src/prompt/: mod.rs
