[package]
name = "copy-desktop-only-alpha"
version = "0.1.0"
edition = "2024"


[dependencies]

[dependencies.windows-sys]
version = ">=0.61"
features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Storage_Xps",
]
